# Phaedra

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  __init__.py  encoder_decoder.py  fsq_quant.py  model_config.yaml  pyproject.toml  requirements.txt  task_phaedra.py  train.py
docs/: index.html
phaedra/: __init__.py  fsq_quant.py  model_config.yaml  phaedra_model.py  task_phaedra.py  test_model.py  train.py  train_loop.py  utils.py
src/: base_task.py  edemamix.py  phaedra_layer.py  phaedra_model.py  test_model.py  train_loop.py  utils.py
