[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phaedra"
version = "1.0.0"
description = "Continuous Earth Observation Tokenizer"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Phaedra Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["tokenization", "earth observation", "deep learning", "quantization"]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "einops>=0.6.0",
    "omegaconf>=2.3.0",
    "accelerate>=0.20.0",
    "torch-ema>=0.3",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
wandb = [
    "wandb>=0.15.0",
]
all = [
    "phaedra[dev,wandb]",
]

[project.urls]
Homepage = "https://github.com/your-org/phaedra"
Documentation = "https://github.com/your-org/phaedra#readme"
Repository = "https://github.com/your-org/phaedra"
Issues = "https://github.com/your-org/phaedra/issues"

[project.scripts]
phaedra-train = "phaedra.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phaedra*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=phaedra --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
